--- a/config.default.json
+++ b/config.default.json
@@ -1,6 +1,6 @@
 {
   "token": "<process.env.TOKEN>",
-  "sentry_dsn": "[YOUR_SENTRY_DSN]",
+  "sentry_dsn": "[SENTRY_DSN]",
   "sentry_environment": "production",
   "bot": {
     "commands_require_mention": false,
